--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <input type="Submit" onclick="signUp()" value="Register Now">
       </div>
       <div class="text">
-        <h3>Already have an account? <a href="../login/index.html">Login now</a></h3>
+        <h3>Already have an account? <a href="./login/index.html">Login now</a></h3>
       </div>
     </form>
   </div>
