--- a/login/index.html
+++ b/login/index.html
@@ -21,7 +21,7 @@
         <input type="Submit" onclick="login()" value="Login Now">
       </div>
       <div class="text">
-        <h3>Create a new account -> <a href="../signup page/index.html">Signup now</a></h3>
+        <h3>Create a new account -> <a href="../index.html">Signup now</a></h3>
       </div>
     </div>
   </div>
